# TestFlightSimulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  imgui_log.txt
.github/workflows/: default.yml
data/: F-16_b.glb  cube.fbx  test.fs.glsl  test.gs.glsl  test.vs.glsl
src/: BuildFunctions.cmake  CMakeLists.txt
src/config/: CMakeLists.txt
src/config/public/: config.h
src/engine/: CMakeLists.txt
src/engine/private/: IEngineInterface.cpp  engine_interface.cpp  gameEngine.cpp  game_engine.cpp  main.cpp
src/engine/private/assets/: Scene.cpp  SceneAsset.cpp  assetBase.cpp  assetId.cpp  assetPtr.cpp  asset_base.cpp  asset_id.cpp  asset_material.cpp  asset_mesh_data.cpp  asset_ptr.cpp  asset_shader.cpp  asset_shader_buffer.cpp  asset_uniform_buffer.cpp  shader.cpp  staticMesh.cpp  texture2d.cpp
src/engine/private/ios/: input_manager.cpp  mesh_importer.cpp  scene_importer.cpp
src/engine/private/misc/: capabilities.cpp
src/engine/private/rendering/: gfx_context.cpp  window.cpp
src/engine/private/rendering/framegraph/: framebuffer.cpp  framegraph.cpp  renderpass.cpp  subpass.cpp
src/engine/private/rendering/uniforms/: uniformBase.cpp
src/engine/private/rendering/vulkan/: commandPool.cpp  command_pool.cpp  common.cpp  descriptorPool.cpp  descriptor_pool.cpp  framebuffer.cpp  shaderModule.cpp  swapchain.cpp  texture.cpp  utils.cpp
src/engine/private/scene/: meshNode.cpp  node.cpp  node_base.cpp  node_camera.cpp  node_mesh.cpp  node_primitive.cpp  scene.cpp  sceneNode.cpp
src/engine/private/ui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
src/engine/private/ui/window/: windowBase.cpp  window_base.cpp
src/engine/private/ui/window/windows/: contentBrowser.cpp  content_browser.cpp  profiler.cpp
src/engine/public/: IEngineInterface.h  engine_interface.h  gameEngine.h
src/engine/public/assets/: Scene.h  SceneAsset.h  assetBase.h  assetId.h  assetPtr.h  asset_base.h  asset_id.h  asset_material.h  asset_mesh.h  asset_mesh_data.h  asset_ptr.h  asset_shader.h  asset_shader_buffer.h  asset_texture.h  asset_uniform_buffer.h  shader.h  staticMesh.h  texture2d.h
src/engine/public/ios/: input_manager.h  mesh_importer.h  node_controller.h  scene_importer.h
src/engine/public/rendering/: gfx_context.h  window.h
src/engine/public/rendering/framegraph/: framebuffer.h  framegraph.h  renderpass.h  subpass.h
src/engine/public/rendering/uniforms/: uniformBase.h
src/engine/public/rendering/vulkan/: command_pool.h  descriptor_pool.h  framebuffer.h  shaderModule.h  swapchain.h  texture.h  utils.h
src/engine/public/scene/: meshNode.h  node.h  node_base.h  node_camera.h  node_mesh.h  node_primitive.h  node_scene.h  scene.h  sceneNode.h  scene_proxy.h
src/engine/public/ui/imgui/: imconfig.h  imgui.h  imgui_impl_vulkan.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/engine/public/ui/window/: windowBase.h  window_base.h
src/engine/public/ui/window/windows/: contentBrowser.h  content_browser.h  profiler.h
src/jobSystem/: CMakeLists.txt
src/jobSystem/private/jobystem/: job.cpp  worker.cpp
src/jobSystem/public/jobSystem/: job.h  job_system.h  worker.h
src/private/: main.cpp
src/private/assets/: GraphicResource.cpp  Scene.cpp  assetBase.cpp  assetPtr.cpp  shader.cpp  staticMesh.cpp  texture2d.cpp
src/private/engine/: statsRecorder.cpp
src/private/engine/jobystem/: job.cpp  worker.cpp
src/private/ios/: logger.cpp  scene_importer.cpp
src/private/misc/: capabilities.cpp
src/private/rendering/: window.cpp
src/private/rendering/vulkan/: commandPool.cpp  common.cpp  descriptorPool.cpp  framebuffer.cpp  shaderModule.cpp  swapchain.cpp  texture.cpp  utils.cpp
src/private/scene/: meshNode.cpp  node.cpp  sceneNode.cpp
src/private/ui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_instance.cpp  imgui_widgets.cpp
src/private/ui/window/: windowBase.cpp
src/private/ui/window/windows/: contentBrowser.cpp  profiler.cpp
src/public/: config.h
src/public/assets/: GraphicResource.h  Scene.h  assetBase.h  assetPtr.h  shader.h  staticMesh.h  texture2d.h
src/public/engine/: noncopyable.h  semaphores.h  statsRecorder.h
src/public/engine/containers/: objectPool.h
src/public/engine/jobSystem/: job.h  job_system.h  worker.h
src/public/ios/: logger.h  scene_importer.h
src/public/misc/: capabilities.h
src/public/rendering/: window.h
src/public/rendering/uniforms/: uniformBase.h
src/public/rendering/vulkan/: commandPool.h  common.h  descriptorPool.h  shaderModule.h  swapchain.h  texture.h  utils.h
src/public/scene/: meshNode.h  node.h  sceneNode.h
src/public/ui/imgui/: imgui.h  imgui_impl_vulkan.h  imgui_instance.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/public/ui/window/: windowBase.h
src/public/ui/window/windows/: profiler.h
src/tests/: CMakeLists.txt
src/tests/jobSystem/: CMakeLists.txt
src/tests/jobSystem/private/: jsTestMain.cpp
src/tests/testGame/: CMakeLists.txt
src/tests/testGame/private/: camera_basic_controller.cpp  main.cpp  testGameInterface.cpp
src/tests/testGame/public/: camera_basic_controller.h  testGameInterface.h
src/utils/: CMakeLists.txt
src/utils/private/: statsRecorder.cpp
src/utils/private/ios/: logger.cpp
src/utils/public/: statsRecorder.h
src/utils/public/ios/: logger.h
src/utils/public/types/: objectPool.h  semaphores.h
tools/: Install.py
